# TASKLED

./: .gitignore  .gitmodules  CMakeLists.txt  partitions_example.csv  sdkconfig  sdkconfig.defaults
components/modem/: CMakeLists.txt
components/modem/include/: esp_modem.h  operators.h  sim800.h
components/modem/src/: esp_modem.c  esp_modem_compat.c  sim800.c
components/utils/: CMakeLists.txt  utils.c
components/wifiConfigF/: CMakeLists.txt  wifiConfigF.c
components/wifiConfigF/include/: wifiConfigF.h
main/: CMakeLists.txt  FileManager.c  Inverter.cpp  Kconfig.projbuild  ModbusDriver.cpp  internet.c  main.c  main.cpp  mqtt.c  ota.c  pppos_client.c  status.c
main/include/: FileManager.h  Inverter.h  ModbusDriver.h  endpoints.h  internet.h  mqtt.h  ota.h  paramDefinition.h  pppos_client.h  status.h
main/include/inverters/: canadian.h  canadianSolar.h  huawei.h  refusol.h  saj.h  sofar.h  sungrow.h  sunspecEcosolys.h  sunspecFronius.h
main/pages/: bus.html  cadastro.html
main/server_certs/: ca.crt  cert.pem
utils/include/: utils.h
